--- a/Simon_Game.html
+++ b/Simon_Game.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Simon Game</h1>
     <h2>Press any key to start the game </h2>
+    <h3 id="highscore">High Score: 0</h3>
     <div class="btn-container">
         <div class="line-one">
             <div class="btn red" type="button" id="red"></div>
